--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,9 @@ dependencies {
    compile 'junit:junit:4.12'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
+
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
